added projects and user functionality
