# api/models/user.js
@@ -1,12 +1,11 @@
-'use strict';
 module.exports = (sequelize, DataTypes) => {
-  const User = sequelize.define('User', {
-    username: DataTypes.STRING,
-    password: DataTypes.STRING,
-    role: DataTypes.STRING,
-  }, {});
-  User.associate = function(models) {
+    const User = sequelize.define('tb_users', {
+        email: DataTypes.STRING,
+        password: DataTypes.STRING,
+        role: DataTypes.STRING
+    }, {});
+    User.associate = function (models) {
 
-  };
-  return User;
+    };
+    return User;
 };
